frontend/test/should_pass/computations_decl_use_transitive.grg
function one() : int
{
	return(1);
}

function three() : int
{
	return(two() + one());
}

function two() : int
{
	return(one() + one());
}

test t : (int)
{
	return(three());
}
