frontend/test/should_fail/recursionOverEmptyPatterns_002.grg
test t
{
	:P();
}

pattern P
{
	optional {
		:P();
	}
}
